--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Hayet"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity6"
+            android:exported="false"
+            android:label="@string/title_activity_main6"
+            android:theme="@style/Theme.Hayet" />
+        <activity
             android:name=".MainActivity5"
             android:exported="false"
             android:label="@string/title_activity_main5"
